--- a/css/style.css
+++ b/css/style.css
@@ -626,6 +626,7 @@ a:hover {
   color: #fff;
   font-weight: 600;
   font-size: 3rem;
+  font-family: 'Sofia', cursive;
 }
 
 .intro .intro-subtitle {
